# streamlit-demo

./: README.md  pyproject.toml
app/: app.py  test_file.py
data/: test.csv
