[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["adrian <tamkayeung.adrian@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_demo" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
